@@ -195,6 +195,8 @@ Trunk (unreleased changes)
 
     HDFS-1585. Fix build after HDFS-1547 (todd)
 
+    HDFS-1684. Balancer cannot start with with multiple namenodes.  (szetszwo)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
